UX: Fix minor styling issues.
This also covers the migration to Font Awesome 5.

--- a/assets/stylesheets/common/encrypt.scss
+++ b/assets/stylesheets/common/encrypt.scss
@@ -1,7 +1,10 @@
 #reply-control {
   .reply-to {
-    i.disabled {
-      color: $primary-low-mid;
+    .d-icon {
+      margin-left: 5px;
+      &.disabled {
+        color: $primary-low-mid;
+      }
     }
   }
 }
